# django-bot-rickroll

./: LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
src/bot_rickroll/: __init__.py  settings.py  urls.py  views.py
src/django_bot_rickroll/: settings.py  urls.py  views.py
src/django_rickroll/: settings.py  urls.py  views.py
tests/: conftest.py  test_urls.py  urls.py
